# Avenir

./: CMakeLists.txt  Readme.txt  compile.sh
src/: CMakeLists.txt  main.cpp
src/core/: AbstractClass.cpp  AbstractClass.hpp  ColorRGBA.cpp  ColorRGBA.hpp  EventManager.cpp  EventManager.hpp  Logger.cpp  Logger.hpp
src/game/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Planet.cpp  Planet.hpp  Scene.cpp  Scene.hpp
